Fix height and scrollbar visibility of the Design Preview sidebar

--- a/client/landing/stepper/declarative-flow/internals/steps-repository/design-setup/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/design-setup/style.scss
@@ -662,7 +662,7 @@ $break-design-preview: 1024px;
 
 			.design-preview__sidebar {
 				margin: 72px -16px 0 -8px;
-				padding: 0 16px 96px 8px;
+				padding: 0 16px 32px 8px;
 			}
 		}
 	}
