--- a/packages/design-preview/src/components/style.scss
+++ b/packages/design-preview/src/components/style.scss
@@ -68,8 +68,7 @@ $break-design-preview: 1024px;
 		border: 0;
 		box-shadow: none;
 		display: block;
-		height: 100%;
-		overflow: scroll;
+		height: auto;
 		padding: 0;
 		position: relative;
 		width: 311px;
